Olympus/src/Apttus Quote/Proposal Approvals Management/objects/Apttus_Approval__Approval_Request__c.object
<CustomObject>
    <fields>
        <fullName>ProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal</description>
        <label>Related Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Approval Requests</relationshipLabel>
        <relationshipName>ApprovalRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProposalLineItemId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal line item</description>
        <label>Related Quote/Proposal Line Item</label>
        <referenceTo>Apttus_Proposal__Proposal_Line_Item__c</referenceTo>
        <relationshipLabel>Approval Requests</relationshipLabel>
        <relationshipName>ApprovalRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProposalOwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated quote/proposal owner</description>
        <label>Related Quote/Proposal Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Approval_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>